[FIX] FIX OVERFLOW X ON MAIN. FIXED HEADBAR

--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,15 @@
 
 main {
     display: flex;
+    height: calc(100% - 108px);
 }
 
 header {
     height: 108px;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+
 }
 
 
@@ -29,8 +34,7 @@ header {
 
 .sidebar-sticky {
     position: sticky;
-    top: 0px;
-
+    top: 108px;
 }
 
 .top-sidebar {
